--- a/css/mm.css
+++ b/css/mm.css
@@ -1,3 +1,10 @@
+body {
+  font-family: Helvetica, sans-serif;
+}
+header {
+  background-color: darkslategrey;
+  color: wheat;
+}
 blockquote {
   background: #f9f9f9;
   border-left: 10px solid #ccc;
